Add payment gateway

--- a/env.local.example
+++ b/env.local.example
@@ -11,3 +11,14 @@ AWS_BUCKET_NAME=your-bucket-name
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+
+# Lemon Squeezy
+LEMONSQUEEZY_STORE_ID=...
+LEMONSQUEEZY_API_KEY=...
+LEMONSQUEEZY_FREE_PRODUCT_ID=...
+LEMONSQUEEZY_PAYG_PRODUCT_ID=...
+LEMONSQUEEZY_SUB_PRODUCT_ID=...
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Set up your webhook endpoint in Lemon Squeezy to:
+# https://yourdomain.com/api/webhook (or local tunnel for dev).
