--- a/env.local.example
+++ b/env.local.example
@@ -22,3 +22,7 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Set up your webhook endpoint in Lemon Squeezy to:
 # https://yourdomain.com/api/webhook (or local tunnel for dev).
+
+# Replicate
+REPLICATE_API_TOKEN=your-replicate-api-token
+REPLICATE_MODEL_VERSION=your-replicate-model-version
